refactor: 重构scheduler结构，删除鉴权
