# api/route.go
@@ -1,15 +1,13 @@
 package api
 
 import (
-	"time"
-
-	"github.com/chencheng8888/GoDo/auth"
 	"github.com/chencheng8888/GoDo/controller"
 	ginzap "github.com/gin-contrib/zap"
 	"github.com/gin-gonic/gin"
 	swaggerfiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 	"go.uber.org/zap"
+	"time"
 )
 
 type RouteIniter interface {
@@ -22,15 +20,15 @@ func (f RouteInitFunc) InitRoute(r *gin.Engine) {
 	f(r)
 }
 
-func NewGinEngine(taskController *controller.TaskController, userController *controller.UserController, auth *auth.Auth, logger *zap.SugaredLogger) *gin.Engine {
+func NewGinEngine(taskController *controller.TaskController, logger *zap.SugaredLogger) *gin.Engine {
 	r := gin.New()
 	r.Use(ginzap.Ginzap(logger.Desugar(), time.RFC3339, true))
 	r.Use(ginzap.RecoveryWithZap(logger.Desugar(), true))
-	
+
 	// Swagger文档路由
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
-	
-	InitRoutes(r, InitTaskRoute(taskController, auth), InitUserRoute(userController))
+
+	InitRoutes(r, InitTaskRoute(taskController))
 	return r
 }
 
@@ -40,26 +38,15 @@ func InitRoutes(r *gin.Engine, initer ...RouteIniter) {
 	}
 }
 
-func InitTaskRoute(taskController *controller.TaskController, auth *auth.Auth) RouteIniter {
+func InitTaskRoute(taskController *controller.TaskController) RouteIniter {
 	return RouteInitFunc(func(r *gin.Engine) {
 		g := r.Group("/api/v1/tasks")
-		// 为所有任务路由添加JWT鉴权中间件
-		g.Use(auth.JWTAuthMiddleware())
+
 		{
-			g.GET("/list", taskController.ListTasks)
+			g.GET("/list/:name", taskController.ListTasks)
 			g.POST("/upload_script", taskController.UploadScript)
 			g.POST("/add_shell_task", taskController.AddShellTask)
 			g.DELETE("/delete", taskController.DeleteTask)
-		}
-	})
-}
-
-func InitUserRoute(userController *controller.UserController) RouteIniter {
-	return RouteInitFunc(func(r *gin.Engine) {
-		g := r.Group("/api/v1/auth")
-		{
-			g.POST("/login", userController.Login)
-			g.POST("/register", userController.Register)
 		}
 	})
 }
