# controller/task.go
@@ -2,6 +2,9 @@ package controller
 
 import (
 	"fmt"
+	"github.com/chencheng8888/GoDo/pkg/id_generator"
+	"github.com/chencheng8888/GoDo/scheduler"
+	"github.com/chencheng8888/GoDo/scheduler/domain"
 	"net/http"
 	"path/filepath"
 	"time"
@@ -9,18 +12,23 @@ import (
 	"github.com/chencheng8888/GoDo/config"
 	"github.com/chencheng8888/GoDo/pkg"
 	"github.com/chencheng8888/GoDo/pkg/response"
-	"github.com/chencheng8888/GoDo/scheduler"
 	"github.com/chencheng8888/GoDo/scheduler/job"
 	"github.com/gin-gonic/gin"
 )
 
+const (
+	TaskIDPrefix = "task_"
+)
+
 type TaskController struct {
-	scheduler *scheduler.Scheduler
+	scheduler scheduler.Scheduler
+
+	generator id_generator.TaskIDGenerator
 
 	workDir string
 }
 
-func NewTaskController(s *scheduler.Scheduler, cf *config.ScheduleConfig) (*TaskController, error) {
+func NewTaskController(s scheduler.Scheduler, generator id_generator.TaskIDGenerator, cf *config.ScheduleConfig) (*TaskController, error) {
 	err := pkg.CreateDirIfNotExist(cf.WorkDir)
 	if err != nil {
 		return nil, err
@@ -29,13 +37,14 @@ func NewTaskController(s *scheduler.Scheduler, cf *config.ScheduleConfig) (*Task
 	return &TaskController{
 		scheduler: s,
 		workDir:   cf.WorkDir,
+		generator: generator,
 	}, nil
 }
 
 // TaskResponse 用于API响应的任务结构体
 // @Description 任务信息响应结构
 type TaskResponse struct {
-	ID            int    `json:"id" example:"12345"`                                                 // 任务ID
+	ID            string `json:"id" example:"12345"`                                                 // 任务ID
 	TaskName      string `json:"task_name" example:"daily-backup"`                                   // 任务名称
 	ScheduledTime string `json:"scheduled_time" example:"0 2 * * * *"`                               // Cron表达式
 	OwnerName     string `json:"owner_name" example:"admin"`                                         // 任务拥有者
@@ -45,15 +54,15 @@ type TaskResponse struct {
 }
 
 // TaskToResponse 将scheduler.Task转换为TaskResponse
-func TaskToResponse(task scheduler.Task) TaskResponse {
+func TaskToResponse(task domain.Task) TaskResponse {
 	return TaskResponse{
 		ID:            task.GetID(),
 		TaskName:      task.GetTaskName(),
 		ScheduledTime: task.GetScheduledTime(),
 		OwnerName:     task.GetOwnerName(),
 		Description:   task.GetDescription(),
-		JobType:       task.GetJobType(),
-		Job:           task.GetJob(),
+		JobType:       task.GetJob().Type(),
+		Job:           task.GetJob().Content(),
 	}
 }
 
@@ -71,17 +80,11 @@ type ListTaskResponseData struct {
 // @Produce json
 // @Security BearerAuth
 // @Success 200 {object} response.Response{data=ListTaskResponseData} "获取成功"
-// @Failure 401 {object} response.Response "未授权"
-// @Router /api/v1/tasks/list [get]
+// @Router /api/v1/tasks/list/{name} [get]
 func (tc *TaskController) ListTasks(c *gin.Context) {
-	// 从JWT中间件设置的上下文中获取用户名
-	userName, exists := c.Get("userName")
-	if !exists {
-		c.JSON(http.StatusUnauthorized, response.Error(response.UnauthorizedCode, response.UnauthorizedMsg))
-		return
-	}
 
-	name := userName.(string)
+	name := c.Param("name")
+
 	tasks := tc.scheduler.ListTasks(name)
 
 	// 转换为响应结构体
@@ -109,17 +112,9 @@ type UploadScriptResponseData struct {
 // @Param file formData file true "脚本文件"
 // @Success 200 {object} response.Response{data=UploadScriptResponseData} "上传成功"
 // @Failure 400 {object} response.Response "文件未上传"
-// @Failure 401 {object} response.Response "未授权"
 // @Failure 500 {object} response.Response "文件保存失败"
 // @Router /api/v1/tasks/upload_script [post]
 func (tc *TaskController) UploadScript(c *gin.Context) {
-	// 检查鉴权
-	_, exists := c.Get("userName")
-	if !exists {
-		c.JSON(http.StatusUnauthorized, response.Error(response.UnauthorizedCode, response.UnauthorizedMsg))
-		return
-	}
-
 	file, err := c.FormFile("file")
 	if err != nil {
 		c.JSON(http.StatusBadRequest, response.Error(response.FileNotUploadedCode, response.FileNotUploadedMsg))
@@ -142,6 +137,7 @@ func (tc *TaskController) UploadScript(c *gin.Context) {
 // @Description 添加Shell任务的请求参数
 type AddShellTaskRequest struct {
 	TaskName      string   `json:"task_name" binding:"required" example:"daily-backup"`          // 任务名称
+	OwnerName     string   `json:"owner_name" binding:"required" example:"admin"`                // 任务拥有者
 	Description   string   `json:"description" binding:"required" example:"每日数据备份任务"`            // 任务描述
 	ScheduledTime string   `json:"scheduled_time" binding:"required,cron" example:"0 2 * * * *"` // Cron表达式(支持秒级)
 	Command       string   `json:"command" binding:"required" example:"/bin/bash"`               // 执行命令
@@ -153,7 +149,7 @@ type AddShellTaskRequest struct {
 // AddShellTaskResponseData 添加Shell任务响应数据
 // @Description 添加任务成功响应数据
 type AddShellTaskResponseData struct {
-	TaskId int `json:"task_id" example:"12345"` // 新创建的任务ID
+	TaskId string `json:"task_id" example:"12345"` // 新创建的任务ID
 }
 
 // AddShellTask 添加Shell任务
@@ -166,37 +162,32 @@ type AddShellTaskResponseData struct {
 // @Param request body AddShellTaskRequest true "任务创建参数"
 // @Success 200 {object} response.Response{data=AddShellTaskResponseData} "创建成功"
 // @Failure 400 {object} response.Response "请求参数错误"
-// @Failure 401 {object} response.Response "未授权"
 // @Router /api/v1/tasks/add_shell_task [post]
 func (tc *TaskController) AddShellTask(c *gin.Context) {
-	// 从JWT中间件设置的上下文中获取用户名
-	userName, exists := c.Get("userName")
-	if !exists {
-		c.JSON(http.StatusUnauthorized, response.Error(response.UnauthorizedCode, response.UnauthorizedMsg))
-		return
-	}
-
 	var req AddShellTaskRequest
 	if err := c.ShouldBindBodyWithJSON(&req); err != nil {
 		c.JSON(http.StatusBadRequest, response.Error(response.InvalidRequestCode, fmt.Sprintf("%s:%s", response.InvalidRequestMsg, err.Error())))
 		return
 	}
 
-	ownerName := userName.(string)
 	shellJob := job.NewShellJob(req.UseShell, time.Duration(req.Timeout)*time.Second, tc.workDir, req.Command, req.Args...)
-	task := scheduler.NewTask(req.TaskName, ownerName, req.ScheduledTime, req.Description, shellJob)
-	taskId, err := tc.scheduler.AddTask(task)
+
+	taskID := tc.generator.Generate(TaskIDPrefix)
+
+	task := domain.NewTask(taskID, req.TaskName, req.OwnerName, req.ScheduledTime, req.Description, shellJob)
+	err := tc.scheduler.AddTask(task)
 	if err != nil {
 		c.JSON(http.StatusBadRequest, response.Error(response.InvalidRequestCode, fmt.Sprintf("%s:%s", response.InvalidRequestMsg, err.Error())))
 		return
 	}
-	c.JSON(http.StatusOK, response.Success(AddShellTaskResponseData{TaskId: taskId}))
+	c.JSON(http.StatusOK, response.Success(AddShellTaskResponseData{TaskId: task.GetID()}))
 }
 
 // DeleteTaskRequest 删除任务请求
 // @Description 删除任务的请求参数
 type DeleteTaskRequest struct {
-	TaskID int `json:"task_id" example:"12345"` // 任务ID
+	UserName string `json:"user_name" binding:"required" example:"admin"` // 任务拥有者
+	TaskID   string `json:"task_id" example:"12345"`                      // 任务ID
 }
 
 // DeleteTask 删除任务
@@ -209,25 +200,16 @@ type DeleteTaskRequest struct {
 // @Param request body DeleteTaskRequest true "删除任务参数"
 // @Success 200 {object} response.Response "删除成功"
 // @Failure 400 {object} response.Response "请求参数错误"
-// @Failure 401 {object} response.Response "未授权"
 // @Failure 500 {object} response.Response "删除任务失败"
 // @Router /api/v1/tasks/delete [delete]
 func (tc *TaskController) DeleteTask(c *gin.Context) {
-	// 从JWT中间件设置的上下文中获取用户名
-	userName, exists := c.Get("userName")
-	if !exists {
-		c.JSON(http.StatusUnauthorized, response.Error(response.UnauthorizedCode, response.UnauthorizedMsg))
-		return
-	}
-
 	var req DeleteTaskRequest
 	if err := c.ShouldBindBodyWithJSON(&req); err != nil {
 		c.JSON(http.StatusBadRequest, response.Error(response.InvalidRequestCode, fmt.Sprintf("%s:%s", response.InvalidRequestMsg, err.Error())))
 		return
 	}
 
-	ownerName := userName.(string)
-	err := tc.scheduler.RemoveTask(ownerName, req.TaskID)
+	err := tc.scheduler.RemoveTask(req.UserName, req.TaskID)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, response.Error(response.DeleteTaskFailedCode, fmt.Sprintf("%s:%s", response.DeleteTaskFailedMsg, err.Error())))
 		return
